servicemesh/3.application/postgres-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-demo-vs
spec:
  hosts:
    - backend-postgres-service-v1-community
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: backend-postgres-service-v1-community
        port:
          number: 5432
