servicemesh/3.application/quarkus-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quarkus-app-destinations
spec:
  host: frontend-java-runner-service-v1
  subsets:
  - name: app-v1
    labels:
      version: v1
